fix layout bugs

--- a/style/style.css
+++ b/style/style.css
@@ -25,17 +25,18 @@ body {
 .player {
 	display: inline-block;
 	width: 15%;
-	margin: 5px; 
 	text-align: center;
+	margin: 0 5px;
 } 
 
 .divider {
-	height: 20px;
+	height: 35px;
 }
 
 .line-control {
 	display: inline-block;
 	cursor: pointer;
+	margin: 0 5px;
 }
 
 .line-control-txt {
@@ -43,11 +44,11 @@ body {
 	border: 1px solid #3b5302;
 	font-size: 1.5em;
 	background: #8cbf16;
-	margin: 5px;
-	padding: 21px 22px 17px 20px;
+	padding: 0 20px;
 	border-radius: 5px;
 	display: block;
 	color: #3b5302;
+	line-height: 61px;
 }
 
 .line-control-txt:hover {
@@ -62,10 +63,10 @@ body {
 
 .watchdisplay {
 	font-size: 1.5em;
+	margin: 15px 0 0 0;
 	background: white;
 	width: 100%;
-	margin: 20px 0 0 0;
-	padding: 21px 0 17px 0;
+	line-height: 61px;
 	display: block;
 	border-radius: 5px;
 	box-shadow: 1px 0px 13px 0px rgba(0,0,0,0.13);
@@ -150,27 +151,9 @@ body {
   -ms-animation: blink .5s alternate infinite;
 }
 
-.button {
-	font-size: 1.5em;
-	background: #fff0f0;
-	border: 1px solid red;
-	margin: 30px;
-	padding: 21px 20px 17px 20px;
-	border-radius: 5px;
-	box-shadow: 1px 0px 13px 0px rgba(0,0,0,0.13);
-	display: inline-block;
-	position: absolute;
-	bottom: 0;
-	text-align: center;
-	color: red;
-}
-
-#line-bp {
-	padding-top: 17px;
-}
 
 #key-bp {
-	margin-left: 31px;
+	margin-left: 24px;
 }
 
 .ball-switch {
